--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "greenbank-display",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dayjs": "^1.11.9",
@@ -16,7 +19,9 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
     "vite": "^4.5.0"
