Add postinstall script to fix Vercel build permissions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "postinstall": "chmod +x node_modules/.bin/vite"
   },
   "dependencies": {
     "dayjs": "^1.11.9",
