--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.9",
+    "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
     "react": "^18.2.0",
