--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
-    "vite": "4.3.5"
+    "vite": "^5.4.10"
   },
   "engines": {
     "node": "20.x"
