--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "buildCommand": "npm install --force && npm run build",
+  "framework": "vite",
+  "installCommand": "npm ci",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
     }
-  ]
+  }
 }
