chore(vercel): remove functions block to fix runtime schema error

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "rewrites": [{ "source": "/met/(.*)", "destination": "/api/met/$1" }],
-  "functions": { "api/**/*.js": { "runtime": "nodejs20.x" } }
+  "rewrites": [
+    { "source": "/met/(.*)", "destination": "/api/met/$1" }
+  ]
 }
