--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
   "routes": [
     { "handle": "filesystem" },
 
+    { "src": "/api/met/(.*)", "dest": "/api/met.js?path=$1" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
 
     { "src": "/embed", "dest": "/embed.html" },
