--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.4.19"
+    "vite": "5.4.9",
+    "web-push": "^3.6.7"
   },
   "engines": {
     "node": "20.x"
