--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "4.3.1",
     "dayjs": "^1.11.9",
     "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
     "moment-hijri": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "vite": "5.4.9"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
-    "vite": "5.4.9",
     "web-push": "^3.6.7"
   },
   "engines": {
