--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
-    "vite": "5.4.9"
+    "vite": "5.4.9",
+    "web-push": "3.6.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
