--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,53 @@
 {
   "version": 2,
+  "framework": "vite",
+  "installCommand": "npm ci",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
+
+  "crons": [
+    { "path": "/api/push/cron", "schedule": "*/1 * * * *" }
+  ],
+
+  "redirects": [
+    { "source": "/mobile", "destination": "/mobile/", "permanent": false }
+  ],
+
+  "headers": [
+    {
+      "source": "/mobile/sw.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, must-revalidate" },
+        { "key": "Service-Worker-Allowed", "value": "/mobile/" }
+      ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, must-revalidate" },
+        { "key": "Service-Worker-Allowed", "value": "/" }
+      ]
+    },
+    {
+      "source": "/mobile/manifest.webmanifest",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, must-revalidate" }
+      ]
+    },
+    {
+      "source": "/mobile/index.html",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, must-revalidate" }
+      ]
+    },
+    {
+      "source": "/index.html",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, must-revalidate" }
+      ]
+    }
+  ],
+
   "routes": [
     { "handle": "filesystem" },
 
