--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
-    "vite": "5.4.9",
     "web-push": "3.6.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "vite": "^5.4.9",
     "web-push": "^3.6.7"
   },
   "engines": {
