--- a/vercel.json
+++ b/vercel.json
@@ -48,12 +48,10 @@
     }
   ],
 
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/api/met/(.*)", "dest": "/api/met.js?path=$1" },
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/embed", "dest": "/embed.html" },
-    { "src": "/slideshow", "dest": "/index.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/api/met/(.*)", "destination": "/api/met.js?path=$1" },
+    { "source": "/embed", "destination": "/embed.html" },
+    { "source": "/slideshow", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
