--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.9",
-    "web-push": "^3.6.7"
+    "vite": "^5.4.9"
   },
   "engines": {
     "node": "20.x"
