--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@vercel/blob": "^1.1.1",
     "@vitejs/plugin-react": "4.3.1",
     "dayjs": "^1.11.9",
     "lucide-react": "^0.536.0",
@@ -19,8 +18,7 @@
     "moment-hijri": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3",
-    "web-push": "3.6.7"
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
