--- a/vercel.json
+++ b/vercel.json
@@ -54,6 +54,7 @@
 
   "rewrites": [
     { "source": "/api/met/(.*)", "destination": "/api/met.js?path=$1" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/embed", "destination": "/embed.html" },
     { "source": "/slideshow", "destination": "/index.html" },
     { "source": "/(.*)", "destination": "/index.html" }
