Fix SPA rewrite so static Quran PDFs are served on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -72,6 +72,8 @@
   ],
 
   "rewrites": [
+    { "handle": "filesystem" },
+
     {
       "source": "/api/met/(.*)",
       "destination": "/api/met.js?path=$1"
