--- a/vercel.json
+++ b/vercel.json
@@ -53,15 +53,21 @@
     }
   ],
 
-  "routes": [
-    { "src": "/api/met/(.*)", "dest": "/api/met.js?path=$1" },
-    { "src": "/api/(.*)", "dest": "/api/$1" },
+  "rewrites": [
+    { "source": "/api/met/(.*)", "destination": "/api/met.js?path=$1" },
+    { "source": "/api/(.*)", "destination": "/api/$1" },
 
-    { "src": "/embed", "dest": "/embed.html" },
-    { "src": "/slideshow", "dest": "/index.html" },
+    { "source": "/embed", "destination": "/embed.html" },
+    { "source": "/slideshow", "destination": "/index.html" },
 
-    { "handle": "filesystem" },
+    // ✅ Do NOT send Quran PDFs to the SPA
+    { "source": "/quran/(.*)", "destination": "/quran/$1" },
 
-    { "src": "/(.*)", "dest": "/index.html" }
+    // ✅ (Optional but good) Do NOT send common static assets to SPA
+    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/(.*)\\.(pdf|png|jpg|jpeg|webp|gif|svg|ico|css|js|map|txt|xml|json|webmanifest)", "destination": "/$1" },
+
+    // ✅ SPA fallback last
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
